# edge-viewer-app

./: README.md  local.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/: index.html  main.ts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt
app/src/main/java/com/example/edgeviewer/gl/: Renderer.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
screenshots/: placeholder.txt
